<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QRiffic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="nav_header">Welcome to QRiffic!</string>
    <string name="first_fragment_label">My Profile</string>
    <string name="second_fragment_label">Create a Profile</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="search_user_label">Search User</string>
    <string name="user_profile_label">My Profile</string>
    <string name="qr_detail_label">QR Detail</string>
    <string name="map_label">Map</string>
    <string name="scanner_label">Scanner</string>
    <string name="searched_profile_label">Profile</string>
    <string name="edit_profile_label">Update Profile</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="user_profile">User Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="search_users">Search Users</string>
    <string name="scan_qr">Scan QR</string>
    <string name="map">Map</string>

    <!-- Create Profile Screen -->
    <string name="create_username_title">Username</string>
    <string name="create_username_hint">Enter username</string>
    <string name="create_email_title">Email</string>
    <string name="create_email_hint">Enter email</string>
    <string name="create_phone_title">Phone</string>
    <string name="create_phone_hint">Enter phone number</string>
    <string name="create_button">Create</string>
    <string name="create_username_warning">That username is already in use</string>
    <string name="create_warning">Warning: You cannot change your profile information once it has been created</string>

    <!-- Search Screen -->
    <string name="search_title">Search by Username</string>
    <string name="search_hint">Enter username</string>

    <!-- Leaderboard Screen -->
    <string name="leaderboard_player_title">My Score</string>
    <string name="leaderboard_location_warning">Location features not enabled</string>

    <string-array name="leaderboard_spinner">
        <item>Top Player Scores</item>
        <item>Most QRMons Scanned</item>
        <item>Top QRMons Globally</item>
        <item>Top QRMons Regionally</item>
    </string-array>

    <!-- Leaderboard Item -->
    <string name="leaderboard_rank_text">Rank</string>
    <string name="leaderboard_username_text">Username</string>

    <!-- New QRMon Screen-->
    <string name="new_qrmon_default_name">Newly Captured QRMon</string>
    <string name="new_qrmon_default_score">Score</string>
    <string name="new_qrmon_default_message">Congrats! You found a new QRMon! What would you like to do?</string>

    <string name="new_qrmon_comment_title">Add comment</string>
    <string name="new_qrmon_comment_hint" tools:ignore="TypographyEllipsis">Start typing here...</string>

    <string name="new_qrmon_photo_title">Add photo</string>
    <string name="new_qrmon_photo_text">Take a new photo</string>

    <string name="new_qrmon_geolocation_title">Add geolocation</string>
    <string name="new_qrmon_geolocation_field">Geolocation goes here</string>
    <string name="new_qrmon_geolocation_text">Add a geolocation</string>

    <string name="new_qrmon_clear_button">Clear</string>

    <!-- Profile Screen -->
    <string name="user_score_text">Total Score</string>
    <string name="user_scanned_text">Total Scanned</string>
    <string name="label_best">Highest Score</string>
    <string name="label_bot">Lowest Score</string>
    <string name="all_qrmon_label">All QRMons</string>
    <string name="empty_qrmon_label">You don\'t have any!</string>
    <string name="searched_empty_qrmon_label">They don\'t have any!</string>

    <string name="profile_na">N/A</string>
    <string name="profile_update">Update</string>

    <!-- QR Detail Screen -->
    <string name="qr_detail_default_username">ash_ketchum</string>
    <string name="qr_detail_default_comment" tools:ignore="Typos">omg this is my fave thing ever!  Like look at how cute this thing is omg omg omg!</string>
    <string name="qr_detail_default_location">Pallet Town</string>
</resources>