<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_top_component"
            android:backgroundTint="@color/boxDarkGrey"
            android:orientation="horizontal"
            android:padding="7dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/person_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/qr_detail_PID_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="0.9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="@string/qr_detail_default_username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_component"
            android:backgroundTint="@color/boxGrey"
            android:gravity="center"
            android:padding="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/qr_detail_comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/qr_detail_default_comment" />

            <ImageView
                android:id="@+id/qr_detail_location_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="7dp"
                tools:ignore="ContentDescription"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/qr_detail_location_info"
                android:layout_width="match_parent"
                android:layout_marginTop="7dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="3dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/location_icon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/qr_detail_location_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/qr_detail_default_location"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>