<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentUserProfile"
    android:id="@+id/fragment_user_profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_left_component"
                android:backgroundTint="#9D5AFD"
                android:padding="10dp"
                android:text="@string/profile_na"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_right_component"
                android:backgroundTint="@color/purple_200"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/boxGrey"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_score_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_scanned_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_scanned_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_scanned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/label_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/label_best"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/top_score_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/lightBlue"

            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">


            <ImageView
                android:id="@+id/imageTop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/eg_identicon"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topQRName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/topQRName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/label_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/label_bot"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/bot_score_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/lightRed"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageBot"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/eg_identicon"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/botQRName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/topQRName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/profile_na"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/all_qrmon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/all_qrmon_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/empty_qrmon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/empty_qrmon_label"
            android:textAlignment="center"
            android:textColor="@color/boxDarkGrey"
            android:textSize="20sp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/profileList"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="3dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:layout_width="match_parent"
            android:layout_height= "match_parent"/>

    </LinearLayout>
</FrameLayout>